style.css
body
{
    background-color: rgb(43, 41, 96);
    font-family: 'Times New Roman', Times, serif;
    font-size: small;
    padding: 20px;
}
.list{
    display: table;
    margin-bottom: 20px ;
    border:2px solid black;
    border-radius: 30px;
    padding: 10px;
    list-style: none;
}
form div label {
    flex-basis: 100px;
}
button,input{
    padding: 5px;
    border-radius: 10px;
    margin: 5px;
}
form div{
    display: flex;
    align-items: center;
    gap: 10px;
}
button{
    background-color: #42b830;
    color: #c64951;
    cursor: pointer;
}
@media (max-width: 600px)
{
    body
    {
        padding:5px;
    }
    form div
    {
        flex-direction: column;
        gap: 5px;
    }
    form div label
    {
        flex-basis: 10px;
    }
    button,input
    {
        margin: 2px;
    }
}

